<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lt_grey"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/details_scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/outer_margin"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/outer_margin"
                android:layout_marginRight="@dimen/outer_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/hotel_logo"
                    android:layout_width="@dimen/hotel_icon_width"
                    android:layout_height="@dimen/hotel_icon_height"
                    android:layout_marginLeft="@dimen/outer_margin"
                    android:layout_marginRight="25dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/layout_padding"
                    android:paddingTop="@dimen/layout_padding" >

                    <TextView
                        android:id="@+id/hotel_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:paddingBottom="@dimen/textview_padding"
                        android:paddingTop="@dimen/textview_padding"
                        android:textSize="@dimen/txt_hotel_title" />

                    <TextView
                        android:id="@+id/hotel_timing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@+id/hotel_name"
                        android:textSize="@dimen/list_textview" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="?android:attr/ratingBarStyleIndicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/hotel_timing"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="0"
                        android:stepSize="0.25" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                style="@style/SeperatorTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/txt_hotel_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/outer_margin"
                android:layout_marginRight="@dimen/outer_margin"
                android:ellipsize="none"
                android:scrollHorizontally="false"
                android:singleLine="false" />

            <LinearLayout
                android:id="@+id/contact_details_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/SeperatorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_details" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/outer_margin"
                    android:layout_marginRight="@dimen/outer_margin" >

                    <ImageView
                        android:id="@+id/icon_contact1"
                        android:layout_width="@dimen/icon_contact_size"
                        android:layout_height="@dimen/icon_contact_size"
                        android:layout_marginRight="@dimen/outer_margin"
                        android:scaleType="fitXY"
                        android:src="@drawable/phone"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/txt_contact1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/icon_contact1"
                        android:layout_toRightOf="@+id/icon_contact1"
                        android:ellipsize="none"
                        android:scrollHorizontally="false"
                        android:singleLine="false"
                        android:textStyle="bold|italic"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/icon_contact2"
                        android:layout_width="@dimen/icon_contact_size"
                        android:layout_height="@dimen/icon_contact_size"
                        android:layout_below="@+id/txt_contact1"
                        android:layout_marginRight="@dimen/outer_margin"
                        android:layout_marginTop="@dimen/layout_padding"
                        android:scaleType="fitXY"
                        android:src="@drawable/phone"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/txt_contact2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/icon_contact2"
                        android:layout_toRightOf="@+id/icon_contact2"
                        android:ellipsize="none"
                        android:scrollHorizontally="false"
                        android:singleLine="false"
                        android:textStyle="bold|italic"
                        android:visibility="gone" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/txt_hotel_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/outer_margin"
                    android:layout_marginLeft="@dimen/outer_margin"
                    android:layout_marginRight="@dimen/outer_margin"
                    android:ellipsize="none"
                    android:scrollHorizontally="false"
                    android:singleLine="false" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/photo_gallary_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/SeperatorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/photos" />

                <Gallery
                    android:id="@+id/hotel_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spacing="@dimen/outer_margin" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/menu_gallary_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/SeperatorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu" />

                <Gallery
                    android:id="@+id/menu_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spacing="@dimen/outer_margin" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/map_layout"
                android:layout_width="match_parent"
                android:layout_height="300dp" >

                <TextView
                    android:id="@+id/tv"
                    style="@style/SeperatorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_reach" />

                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.MapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv"
                    android:apiKey="AIzaSyBJMwMuwZmMSrXahS3RNTTcOyTqyhEhRpw" />

                <ImageView
                    android:id="@+id/transparent_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/tv"
                    android:layout_marginLeft="@dimen/outer_margin"
                    android:layout_marginRight="@dimen/outer_margin"
                    android:src="@color/transparent" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/review_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    style="@style/SeperatorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews" />

                <LinearLayout
                    android:id="@+id/display_review_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>

                <include layout="@layout/review_layout" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>